--- a/DemoSpringMVC/src/main/webapp/WEB-INF/web.xml
+++ b/DemoSpringMVC/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
 <web-app xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xmlns = "http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation = "http://xmlns.jsp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
@@ -11,7 +10,7 @@
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
-      <param-name>contextClass</param-name>
+      <param-name>contextConfigLocation</param-name>
       <param-value>/WEB-INF/springmvc-servlet.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
